--- a/quartz/styles/checkboxes.scss
+++ b/quartz/styles/checkboxes.scss
@@ -1,17 +1,12 @@
 @use "./variables.scss" as *;
 
 li:has(> input.checkbox-toggle),
-li:has(> p > input.checkbox-toggle),
-li:has(> label > input.checkbox-toggle) {
+li:has(> p > input.checkbox-toggle) {
   list-style: none;
   position: relative;
 
   &::marker {
     content: none;
-  }
-
-  > label {
-    cursor: text;
   }
 }
 
@@ -38,15 +33,13 @@ input.checkbox-toggle {
 
   // Most recent list ancestor is ul
   ul > li > &,
-  ul > li > p > &,
-  ul > li > label > & {
+  ul > li > p > & {
     left: var(--ul-left);
   }
 
   // Most recent list ancestor is ol
   ol > li > &,
-  ol > li > p > &,
-  ol > li > label > & {
+  ol > li > p > & {
     left: var(--ol-left);
 
     // Safari uses margin-left instead of padding-left on ol > li
@@ -64,8 +57,7 @@ input.checkbox-toggle {
   // Checked boxes and their box children will be styled the same
   &:checked,
   li:has(> input.checkbox-toggle:checked) &,
-  li:has(> * > input.checkbox-toggle:checked) &,
-  li:has(> label > input.checkbox-toggle:checked) & {
+  li:has(> * > input.checkbox-toggle:checked) & {
     --checkbox-color: light-dark(
       color-mix(in srgb, var(--green), var(--light) 20%),
       color-mix(in srgb, var(--green), var(--dark) 45%)
@@ -98,25 +90,18 @@ input.checkbox-toggle {
 
 // Make lighter in a way that includes eg favicons
 
-:is(
-    li:has(> input.checkbox-toggle:checked),
-    li:has(> * > input.checkbox-toggle:checked),
-    li:has(> label > input.checkbox-toggle:checked)
-  ):not(
+:is(li:has(> input.checkbox-toggle:checked), li:has(> * > input.checkbox-toggle:checked)):not(
     li:has(> input.checkbox-toggle:checked) *,
     li:has(> * > input.checkbox-toggle:checked) *,
-    li:has(> label > input.checkbox-toggle:checked) *,
     #punctilio-demo *
   ) {
   opacity: 0.75;
 }
 
 // Checked state
-:is(
-    li:has(> input.checkbox-toggle:checked),
-    li:has(> * > input.checkbox-toggle:checked),
-    li:has(> label > input.checkbox-toggle:checked)
-  ):not(#punctilio-demo *) {
+:is(li:has(> input.checkbox-toggle:checked), li:has(> * > input.checkbox-toggle:checked)):not(
+    #punctilio-demo *
+  ) {
   &,
   & p {
     text-decoration: line-through;
